1) Modified DoubleAuctionOrderBook to use TreeSets, LimitOrders to implement Comparable. This allowed to drop some third of code in OrderBook and obtain some speedup by removing Vector overhead; 2) DoubleAuctionOrderBook now implements cleanup where expired orders are removed and, returns per tick computed and negative spreads dealt with; 3) FarmerPlayer randomly drops LimitOrders and MarkerOrders to test order book scheme. Need to move from uniform to Poisson distributions to get to Farmer's specification; 4) Added histogram-based visualization for order book shape.
TO DO: I got completely lost what is ask, bid, sell, buy. There must be plenty of bugs on this level.

TO DO: Finish feedbacks from Market to Players on status of their orders.

TO DO: There is many ways of determining exact exchange prices and defining returns (end of period? integrated over tick?). Need to set down on one.

--- a/main.properties
+++ b/main.properties
@@ -11,7 +11,16 @@ s=0.1
 # number of assets present on market 
 numAssets=1
 # name of class of agent to use
-agentClass=ContPlayer
+agentClass=FarmerPlayer
 # name of class of orderbook to use
-orderBookClass=ContBook
+orderBookClass=ModDoubleAuctionOrderBook
+# Limit order arrival for ZI traders \alpha
+alpha=1
+# Market order arrival for ZI traders \mu
+mu=1
+# Mean survival time for limit orders \delta
+delta=10  
+
+  
+
 	
