--- a/main.properties
+++ b/main.properties
@@ -13,13 +13,17 @@ numAssets=1
 # name of class of agent to use
 agentClass=FarmerPlayer
 # name of class of orderbook to use
-orderBookClass=ModDoubleAuctionOrderBook
-# Limit order arrival for ZI traders \alpha
-alpha=1
-# Market order arrival for ZI traders \mu
+orderBookClass=DoubleAuctionOrderBook
+# Mean time between order arrivals for ZI traders
 mu=1
 # Mean survival time for limit orders \delta
 delta=10  
+# Min price of any asset
+minPrice=0
+# Max price of any asset
+maxPrice=20
+# Tick length for reporting purposes (in number of agent activations)
+tickLenght=100
 
   
 
