Implements Farmer Zero Intelligence traders, Splitting FarmerPlayer into two - impatient and patient players following poisson order and cancelation rates.

--- a/main.properties
+++ b/main.properties
@@ -11,7 +11,9 @@ s=0.1
 # number of assets present on market 
 numAssets=1
 # name of class of agent to use
-agentClass=FarmerPlayer
+agentClass1=FarmerImpatientPlayer
+agentClass1Prob=0.4
+agentClass2=FarmerPatientPlayer
 # name of class of orderbook to use
 orderBookClass=DoubleAuctionOrderBook
 # Mean time between order arrivals for ZI traders
@@ -19,9 +21,9 @@ mu=1
 # Mean survival time for limit orders \delta
 delta=10  
 # Min price of any asset
-minPrice=0
+minPrice=0.0001
 # Max price of any asset
-maxPrice=20
+maxPrice=200
 # Tick length for reporting purposes (in number of agent activations)
 tickLenght=100
 
