--- a/setups/main.properties
+++ b/setups/main.properties
@@ -6,10 +6,10 @@ D=0.001
 numAssets=1
 
 # Name of file describing classes and number of instances of agents to be used in simulation 
-agentConfiguration=farmer.txt  
+agentConfiguration=cont.txt  
 
 # name of class of orderbook to use
-orderBookClass=DoubleAuctionOrderBook
+orderBookClass=ContBook
 # options for orderbook (only used for DoubleAuctionOrderBooks)
 orderBookOptions=logPricing
 #Initial price
