--- a/setups/main.properties
+++ b/setups/main.properties
@@ -1,19 +1,19 @@
 # max number of ticks
-maxT=20000
+maxT=200000
 # standard deviation of the noise (used for calculation of epsilon_t)
-D=0.001
+D=1
 # number of assets present on market 
 numAssets=1
 
 # Name of file describing classes and number of instances of agents to be used in simulation 
-agentConfiguration=cont.txt  
+agentConfiguration=LS.txt  
 
 # name of class of orderbook to use
-orderBookClass=ContBook
+orderBookClass=LSBook
 # options for orderbook (only used for DoubleAuctionOrderBooks)
 orderBookOptions=logPricing
 #Initial price
-initialPrice=10.0
+initialPrice=1.0
   
 # Cont market depth 
 Cont_lambda=10
@@ -28,4 +28,14 @@ Farmer_delta=0.07
 Farmer_mu=0.45
 # Farmer: shares per trade (order size) 
 Farmer_sigma=1
+
+
+# For efficient market
+LS_h=0.00004
+LS_kappa=0.2
+LS_herding=true
+LS_volatility=false
+LS_meanField=false
+
+
 	
