--- a/setups/main.properties
+++ b/setups/main.properties
@@ -1,15 +1,15 @@
 # max number of ticks
-maxT=200000
+maxT=20000
 # standard deviation of the noise (used for calculation of epsilon_t)
 D=1
 # number of assets present on market 
 numAssets=1
 
 # Name of file describing classes and number of instances of agents to be used in simulation 
-agentConfiguration=LS.txt  
+agentConfiguration=farmer.txt  
 
 # name of class of orderbook to use
-orderBookClass=LSBook
+orderBookClass=DoubleAuctionOrderBook
 # options for orderbook (only used for DoubleAuctionOrderBooks)
 orderBookOptions=logPricing
 #Initial price
