Adds support to Farmer model for rounding prices to cents (or other units) and allows either log or linear pricing outputs for comparison. Changes calculation of Cont volume numbers. Adds example main.properties files for farmer and cont models.

--- a/setups/main_cont.properties
+++ b/setups/main_cont.properties
@@ -1,17 +1,17 @@
 # max number of ticks
 maxT=20000
 # standard deviation of the noise (used for calculation of epsilon_t)
-D=0.15
+D=0.01
 # number of assets present on market 
 numAssets=1
 
 # Name of file describing classes and number of instances of agents to be used in simulation 
-agentConfiguration=farmer.txt
+agentConfiguration=cont.txt
 
 # name of class of orderbook to use
-orderBookClass=DoubleAuctionOrderBook
+orderBookClass=ContBook
 # options for orderbook (only used for DoubleAuctionOrderBooks)
-orderBookOptions=logPricing
+orderBookOptions=linearPricing
 #Initial price
 initialPrice=10.0
   
