Fixed Cont (after some change, wrong probabilities were used when deciding if to update)

--- a/setups/main.properties
+++ b/setups/main.properties
@@ -1,24 +1,25 @@
 # max number of ticks
-maxT=20000
+maxT=500000
 # standard deviation of the noise (used for calculation of epsilon_t)
-D=0.15
+D=0.001
 # number of assets present on market 
 numAssets=1
 
 # Name of file describing classes and number of instances of agents to be used in simulation 
-agentConfiguration=farmer.txt
+agentConfiguration=cont.txt
 
 # name of class of orderbook to use
-orderBookClass=DoubleAuctionOrderBook
+orderBookClass=ContBook
 # options for orderbook (only used for DoubleAuctionOrderBooks)
 orderBookOptions=logPricing
 #Initial price
-initialPrice=10.0
+initialPrice=1.0
   
 # Cont market depth 
 Cont_lambda=10
 # Cont ratio of traders updating threshold
 Cont_s=0.1
+
 
 # Farmer: Patient trader orders placed per step
 Farmer_alpha=0.5
